<resources>
    <string name="app_name">Bookworm</string>
    <string name="create_user">Создать пользователя</string>
    <string name="save">Сохранить</string>
    <string name="user_name">Имя</string>
    <string name="berth_date">Дата рождения</string>
    <string name="address">Адрес</string>
    <string name="email">E-mail</string>
    <string name="send">Отправить</string>
    <string name="send_message">Send message…</string>
    <string name="name_error_message">Введите корректное имя</string>
    <string name="berth_error_message">Введите корректную дату рождения</string>
    <string name="address_error_message">Введите корректный адрес</string>
    <string name="email_error_message">Введите корректный e-mail</string>
    <string name="date_format_helper">формат дд.мм.гггг</string>
    <string name="select_app_theme">Выберите тему приложения</string>
    <string name="light_mode">Светлая тема</string>
    <string name="night_mode">Темная тема</string>
    <string name="system_mode">Как в системе</string>
    <string name="settings">Настройки</string>
    <string name="user_name_label">Имя:</string>
    <string name="user_berth_label">Дата рождения:</string>
    <string name="user_address_label">Адрес:</string>
    <string name="user_email_label">E-mail:</string>
    <string name="wrong_input">Неверный ввод</string>
    <string name="error">Ошибка!</string>
    <string name="reload">Еще раз!</string>
    <string name="enter_text">Введите текст…</string>
    <string name="add_user">Добавить пользователя</string>
    <string name="categories">Категории:</string>
    <string name="about">О книге:</string>
    <string name="about_volume">О книге</string>
    <string name="published_date">Дата публикации:</string>
    <string name="publisher">Издательство:</string>
    <string name="authors">Авторы:</string>
    <string name="subtitle">Подзаголовок:</string>
    <string name="language">Язык:</string>
    <string name="login">Логин</string>
    <string name="enter">Вход</string>
    <string name="password">Пароль</string>
    <string name="login_helper">Логин по умолчанию: user</string>
    <string name="password_helper">Пароль по умолчанию: password</string>
    <string name="to_login">Войти</string>
    <string name="required_field">Поле обязательное для заполнения</string>
    <string name="home">Главная</string>
    <string name="search">Поиск</string>
    <string name="profile">Профиль</string>
    <string name="popular_genres">Популярные жанры</string>
    <string name="last_viewed">Недавно просмотренные</string>
    <string name="newest">Новинки</string>
    <string name="free_books">Бесплатные книги</string>
    <string name="quick_search">Быстрый поиск…</string>
    <string name="favorite">Избранное</string>
    <string name="science">Наука</string>
    <string name="romance">Роман</string>
    <string name="fiction">Фантаситка</string>
    <string name="education">Образование</string>
    <string name="humor">Юмор</string>
    <string name="poetry">Поэзия</string>
    <string name="design">Дизайн</string>
    <string name="book_of_day">Книга дня</string>
    <string name="remove_all">Удалить все</string>
    <string name="remove_history_warning">Очистить историю просмотров?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="remove_favorites_warning">Очистить избранное?</string>
    <string name="remove">Удалить</string>
    <string name="edit">Редактировать</string>
</resources>