<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    android:clickable="true"
    android:focusable="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/details_appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/img_height_500"
        android:background="?attr/colorSurface">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/details_col_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/book_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                app:srcCompat="@android:drawable/ic_menu_gallery" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/details_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="top"
                app:layout_collapseMode="parallax" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/details_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_8">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/book_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_8"
                android:gravity="center"
                android:textSize="@dimen/text_l"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Book Title" />

            <androidx.appcompat.widget.AppCompatRatingBar
                android:id="@+id/rating_bar"
                style="@android:style/Widget.DeviceDefault.Light.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_12"
                android:stepSize="0.1"
                app:layout_constraintEnd_toStartOf="@+id/book_rating"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/book_title"
                tools:rating="5" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/book_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8"
                android:layout_marginTop="@dimen/margin_8"
                android:textColor="?colorSecondary"
                android:textSize="@dimen/text_m"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/rating_bar"
                app:layout_constraintTop_toBottomOf="@+id/book_title"
                tools:text="9.2" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/book_subtitle_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:alpha="0.6"
                android:text="@string/subtitle"
                android:textSize="@dimen/text_m"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rating_bar" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/book_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_m"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/book_subtitle_label"
                tools:text="Some book subtitle" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/authors_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:alpha="0.6"
                android:text="@string/authors"
                android:textSize="@dimen/text_m"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/book_subtitle" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/authors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_m"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/authors_label"
                tools:text="Book Authors" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/categories_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:alpha="0.6"
                android:text="@string/categories"
                android:textSize="@dimen/text_m"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/authors" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/categories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_m"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/categories_label"
                tools:text="Book Categories" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/publisher_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:alpha="0.6"
                android:text="@string/publisher"
                android:textSize="@dimen/text_m"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/categories" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/publisher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_m"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/publisher_label"
                tools:text="Publisher Name" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/published_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:alpha="0.6"
                android:text="@string/published_date"
                android:textSize="@dimen/text_m"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/publisher" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/published_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_8"
                android:layout_marginTop="@dimen/margin_16"
                android:textSize="@dimen/text_m"
                app:layout_constraintStart_toEndOf="@id/published_date_label"
                app:layout_constraintTop_toBottomOf="@+id/publisher"
                tools:text="2022-06-15" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/language_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:alpha="0.6"
                android:text="@string/language"
                android:textSize="@dimen/text_m"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/published_date_label" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_8"
                android:layout_marginTop="@dimen/margin_16"
                android:textSize="@dimen/text_m"
                app:layout_constraintStart_toEndOf="@id/language_label"
                app:layout_constraintTop_toBottomOf="@+id/published_date_label"
                tools:text="EN" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/book_details_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:alpha="0.6"
                android:text="@string/about"
                android:textSize="@dimen/text_m"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/language_label" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/book_details"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_m"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/book_details_label"
                tools:text="Some book description" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/error_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/ic_report_problem_96"
        android:visibility="gone"
        tools:visibility="visible" />

    <ProgressBar
        android:id="@+id/details_loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        tools:visibility="visible" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
